After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670570 - gnome-control-center crashed with SIGSEGV in on_screen_changed()
gnome-control-center crashed with SIGSEGV in on_screen_changed()
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Display
3.3.x
Other Linux
: Normal critical
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-21 22:37 UTC by Sebastien Bacher
Modified: 2012-03-01 16:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (906 bytes, patch)
2012-02-25 14:41 UTC, Michael Terry
committed Details | Review

Description Sebastien Bacher 2012-02-21 22:37:36 UTC
The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/gnome-control-center/+bug/843274 on GNOME 3.2

There is an updated backtrace on https://bugs.launchpad.net/ubuntu/+source/gnome-control-center/+bug/937770 with gnome-control-center 3.3.5

"I turn off a VGA Monitor with the system settings and when i removed the vga-cable this crash happend.

  • #0 on_screen_changed
    at cc-display-panel.c line 243
  • #1 closure_invoke_notifiers
    at /build/buildd/glib2.0-2.31.18/./gobject/gclosure.c line 282
  • #2 g_closure_invoke
    at /build/buildd/glib2.0-2.31.18/./gobject/gclosure.c line 773
  • #3 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.31.18/./gobject/gsignal.c line 3307
  • #4 g_signal_emit_valist
    at /build/buildd/glib2.0-2.31.18/./gobject/gsignal.c line 3063
  • #5 g_signal_emit_by_name
    at /build/buildd/glib2.0-2.31.18/./gobject/gsignal.c line 3111
  • #6 gdk_event_source_translate_event
    at /build/buildd/gtk+3.0-3.3.14/./gdk/x11/gdkeventsource.c line 204
  • #7 _gdk_x11_display_queue_events
    at /build/buildd/gtk+3.0-3.3.14/./gdk/x11/gdkeventsource.c line 334
  • #8 gdk_display_get_event
    at /build/buildd/gtk+3.0-3.3.14/./gdk/gdkdisplay.c line 309
  • #9 gdk_event_source_dispatch
    at /build/buildd/gtk+3.0-3.3.14/./gdk/x11/gdkeventsource.c line 356
  • #10 next_valid_source
    at /build/buildd/glib2.0-2.31.18/./glib/gmain.c line 2564
  • #11 g_main_context_check
    at /build/buildd/glib2.0-2.31.18/./glib/gmain.c line 3026

Comment 1 Sebastien Bacher 2012-02-21 22:40:02 UTC
There is a similar bug reported on the fedora bugzilla as well it seems: https://bugzilla.redhat.com/show_bug.cgi?id=757308
Comment 2 André Klapper 2012-02-22 10:14:54 UTC
crash => critical
Comment 3 Michael Terry 2012-02-25 14:41:03 UTC
Created attachment 208400 [details] [review]
Proposed patch

To reproduce:
1) Enter System Settings
2) Enter the Displays panel
3) Click on All Settings button to go back
4) Plug in an external monitor

This patch fixes the crash for me.
Comment 4 Matthias Clasen 2012-02-25 15:12:10 UTC
Review of attachment 208400 [details] [review]:

Looks right to me