display: Fix crash when the screen setup changes

after the Display panel has been closed.

https://bugzilla.gnome.org/show_bug.cgi?id=670570